2015-12-21  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.cc (modacl): Move recomputing mask into new function.
	(check_got_mask): New function checking if mask is in input.
	(recompute_mask): New function to recompute mask.
	(addmissing): Align mask computation to Linux setfacl.
	(setfacl): Call check_got_mask and recompute_mask on Set, Delete and
	Modify actions.
	(usage): Rename --substitute to --set.
	(longopts): Add --set option.

2015-12-20  Houder  <houder@xs4all.nl>

	* setfacl.cc (longopts): Drop accidentally requiring an argument to
	the --mask and --no-mask options.

2015-12-19  Houder  <houder@xs4all.nl>

	* setfacl.cc (opts): Add colon to x option.

2015-12-06  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc (absolute_flag): Initialize to CCP_RELATIVE to simplify
	expressions.
	(cygdrive_flag): New global flag.
	(long_options): Add --proc-cygdrive option.
	(options): Add -U option.
	(usage): Add description for -U option.
	(do_sysfolders): Or cygdrive_flag to cygwin_conv_path call.
	(do_pathconv): Simply or absolute_flag to conv_func.  Or
	cygdrive_flag to conv_func.
	(do_options): Initalize absolute_flag to CCP_RELATIVE.  Initialize new
	cygdrive_flag.  Set absolute_flag to CCP_ABSOLUTE on -a.  Set
	cygdrive_flag to CCP_PROC_CYGDRIVE on -U.

2015-11-26  Michael Kwasigroch  <mkwasigr@web.de>

	* kill.cc (strsigno): Don't call sys_sigabbrev for signal 0.
	(listsig): Don't call strsigno for signal 0.

2015-11-18  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (action_t): Rename DeleteAll to DeleteExt.  Add
	DeleteAll.  Rearrange for bit-wise testing later in the code.
	(delallacl): Handle -b -k combination.
	(setfacl): Handle DeleteExt/DeleteAll.
	(usage): Fix -b/-k output.  Rearrange output to better fill 80
	columns. 
	(main): Allow to combine -b and -k.

2015-11-18  Corinna Vinschen  <corinna@vinschen.de>

	Reapply POSIX ACL changes.

	* getfacl.c (main): Special-case SYSTEM and Admins group.  Add comments.
